added basic implementation of android text recognizer

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,7 +8,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:4.0.0'
+
     }
 }
 
@@ -30,4 +31,9 @@ android {
     lintOptions {
         disable 'InvalidPackage'
     }
+}
+
+dependencies {
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.0.0'
+
 }
