--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -33,8 +33,8 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "dev.samihaddad.card_scanner_example"
-        minSdkVersion 16
+        applicationId "dev.samihaddad.card_scanner_ex"
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
